# chess-elo-guesser

./: .gitignore  README.md  test.py
chess_elo_guesser/: __init__.py  setup.py
chess_elo_guesser/data_loader/: __init__.py  lan.py  tnot.py  utils.py
chess_elo_guesser/data_loader/cython/: lan_cython_loader.pyx
parser/: Cargo.toml
parser/src/: disambiguation.rs  main.rs  pgniterator.rs
pgn2tnot/: Cargo.toml
pgn2tnot/src/: disambiguation.rs  filenamechunker.rs  filenameiterator.rs  main.rs  pgniterator.rs
rs-test/: Cargo.toml
rs-test/src/: main.rs
tnotation_loader/: __init__.py  constants.py  setup.py  test.py  tnotation_loader.pyx  tnotation_loader_iter.pyx
tnotation_loader/cython/: tnot_cython_loader.pyx
